# doctane

./: .gitignore  LICENSE  README.md  _config.yml  app.html  app.py  architecture.html  developer-guide.html  docs.html  index.html  privacy.html  profile.html  pyproject.toml  requirements.txt  robots.txt  run.bat  run.ps1  setup.py  sitemap.xml  terms.html
api/: main.py
datasets/: abstract_dataset.py  char_word_generator.py  data_split.py  detection_dataset_column_row.py  detection_dataset_text.py  filter_by_vocab.py  io_utils.py  orientation_dataset.py  plot_ploygons.py  recognition_dataset.py  transform_utils.py  utils.py  vocabs.py
dev/: README.md  plan_plot.py
dev/assets/: indian_nonlatin_ocr_datasets.csv  ocr_datasets_with_paper_links.csv
evaluate/: metrics.py
models/: pre_processor.py
models/classification/: README.md  classifiers.py
models/detection/: __init__.py  detection_postprocessor.py  smp_model_zoo.py  smp_models.py  utils.py
models/recognition/: README.MD  __init__.py  model_zoo.py  recog_metrics.py  recog_utils.py  string_utils.py  utils.py
models/row_and_column_detection/: smp_model.py
notebooks/: demo_ocr_pipeline.ipynb
ocr_pipeline/: ocr_predictor.py  ocr_predictor_dp.py  utils.py
predictor/: detection_predictor.py  orientation_predictor.py  recognition_predictor.py
train/: additional_pre_processor.py  utils.py
utils/: builder.py  common_types.py  dl_utils.py  fonts.py  geometry.py  io_elements.py  io_utils.py  metrics.py  multithreading.py  pre_processor.py  reconstitution.py  representation.py  visualization.py
(+30 files in other folders)
