[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doctane"
version = "0.1.0a0"
description = "Doctane: Like Octane — fast, powerful doc processing multi-model"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name="zeross", email="purushothamanprt@gmail.com" }
]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image-to-Text",
    "Topic :: Scientific/Engineering :: OCR",
]

dependencies = [
    "numpy",
    "opencv-python",
    "torch",
    "torchvision",
    "pyyaml"
]

[tool.setuptools.packages.find]
exclude = ["tests*", "notebooks*", "scripts*"]
